# patent-frontend

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
.claude/: launch.json
backend/: .gitignore  README.md  guide1.md  pyproject.toml
backend/1020140036561_타이어_트레드_고무_조성물_및_이를_이용하여_제조한_타이어/01_특허/: patent.json
backend/1020140036561_타이어_트레드_고무_조성물_및_이를_이용하여_제조한_타이어/02_의견제출통지서/: 의견제출통지서.json
backend/1020140036561_타이어_트레드_고무_조성물_및_이를_이용하여_제조한_타이어/03_인용문헌/: 타이어_트레드용_고무_조성물_및_이를_이용하여_제조한_타이어.json
backend/1020140036561_타이어_트레드_고무_조성물_및_이를_이용하여_제조한_타이어/04_보정이력/: claims_history.json
backend/docs/superpowers/plans/: 2026-04-28-patent-agent.md
backend/docs/superpowers/specs/: 2026-04-28-patent-agent-design.md
backend/src/patent_agent/api/: deps.py  main.py
backend/src/patent_agent/core/: chatbot.py  pipeline.py  prompts.py  storage.py
backend/src/patent_agent/llm/: __init__.py  base.py  claude.py  openai_provider.py
backend/src/patent_agent/models/: analysis.py  input.py  output.py
backend/src/patent_agent/prompts/: chatbot_system.j2  tool1.j2  tool2.j2  tool3.j2  tool4.j2  tool5.j2  tool6_defensive.j2  tool6_offensive.j2
backend/src/patent_agent/tools/: tool1_parse_office_action.py  tool2_parse_claims.py  tool3_map_spec.py  tool4_claim_chart.py  tool5_strategy.py  tool6_amendment.py
backend/tests/: conftest.py
backend/tests/integration/: test_e2e_demo.py  test_pipeline.py
backend/tests/unit/: factories.py  test_llm.py  test_storage.py  test_tool1.py  test_tools.py
(+72 files in other folders)
